--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav class="navbar">
             <div class="nav-links">
                 <a href="#">Beranda</a>
-                <a href="#">Data Produk</a> <a href="#">Profile</a>
-                <a href="#">Tentang Kami</a>
+                <a href="#">Data Produk</a> <a href="login.html">Profile</a>
+                <a href="admin.html">Tentang Kami</a>
             </div>
             <div class="search-profile">
                 <input type="search" placeholder="Search Bar..." class="search-bar">
@@ -39,4 +39,5 @@
         <p>Iklan: Dapatkan Resep Kue Gratis Setiap Bulan!</p>
     </aside>
 </body>
+
 </html>
